fix search bar not showing rounded issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,29 +118,25 @@ body {
   background: aliceblue;
 }
 /* search bar */
-.search-btn {
+#search-btn {
   background-color: #fe424d;
   color: white;
   border-radius: 25px;
   padding: 0 1rem 0 1rem;
 }
 
-.search-inp {
+#search-inp {
   border-radius: 25px;
   padding: 0.5rem 3rem 0.5rem 3rem;
   font-size: 1rem;
 }
 
-.container-fluid {
-  background-color: inherit;
-}
-
-.search-btn:hover {
+#search-btn:hover {
   background-color: #fe424d;
   color: white;
 }
 
-.search-btn i {
+#search-btn i {
   margin-right: 0.5rem;
   display: inline;
 }
